--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,10 @@
 }
 body {
     height: 100vh;
-    width: 100%;
     background-color: #333;
+    display: grid;
+    place-items: center;
     color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
 }
 #insert {
@@ -19,7 +17,6 @@ body {
     flex-wrap: wrap;
 }
 .box {
-    flex-wrap: wrap;
     margin: 1.5rem;
     display: flex;
     align-items: center;
@@ -29,11 +26,9 @@ body {
     color: #bababa;
 }
 small {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     width: 9rem;
     height: 4rem;
+    line-height: 4rem;
     margin: 0.3rem;
     background-color: #444444;
     border: 1px solid #fff;
